add first news article

--- a/views/newsPage/index.html
+++ b/views/newsPage/index.html
@@ -105,7 +105,7 @@
 
       <div class="news-grid">
         <!-- News Item 1 -->
-        <a href="/news/giai-phap-khi-dot-cong-nghiep-2025" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
@@ -123,7 +123,7 @@
         </a>
 
         <!-- News Item 2 -->
-        <a href="/news/hop-tac-doanh-nghiep-quoc-te" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
@@ -141,7 +141,7 @@
         </a>
 
         <!-- News Item 3 -->
-        <a href="/news/thi-truong-khi-dot-2025" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
@@ -159,7 +159,7 @@
         </a>
 
         <!-- News Item 4 -->
-        <a href="/news/dao-tao-ky-thuat-vien" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
@@ -177,7 +177,7 @@
         </a>
 
         <!-- News Item 5 -->
-        <a href="/news/cong-nghe-khi-hoa-long" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
@@ -195,7 +195,7 @@
         </a>
 
         <!-- News Item 6 -->
-        <a href="/news/trien-lam-cong-nghiep" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
@@ -213,7 +213,7 @@
         </a>
 
         <!-- News Item 7 -->
-        <a href="/news/trien-lam-cong-nghiep" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
@@ -231,7 +231,7 @@
         </a>
 
         <!-- News Item 8 -->
-        <a href="/news/trien-lam-cong-nghiep" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
@@ -249,7 +249,7 @@
         </a>
 
         <!-- News Item 9 -->
-        <a href="/news/trien-lam-cong-nghiep" class="news-card">
+        <a href="/newsArticle1" class="news-card">
           <div class="news-thumbnail">
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
