remove the link from the tab in the intro section of home page

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -107,27 +107,33 @@
 
     <div class="tab-container">
       <div class="tabs">
-        <button class="tab-button active" data-tab="about-tab">
-          <a href="/aboutPage#ve-chung-toi" title="Thông tin về Công ty Kỳ Long"
-            >Về chúng tôi</a
-          >
+        <button
+          class="tab-button active"
+          data-tab="about-tab"
+          title="Thông tin về Công ty Kỳ Long"
+        >
+          Về chúng tôi
         </button>
-        <button class="tab-button" data-tab="team">
-          <a
-            href="/aboutPage#doi-ky-su"
-            title="Đội ngũ kỹ sư chuyên nghiệp Kỳ Long"
-            >Đội Kỹ Sư</a
-          >
+        <button
+          class="tab-button"
+          data-tab="team"
+          title="Đội ngũ kỹ sư chuyên nghiệp Kỳ Long"
+        >
+          Đội Kỹ Sư
         </button>
-        <button class="tab-button" data-tab="technology">
-          <a href="/aboutPage#cong-nghe" title="Công nghệ tiên tiến của Kỳ Long"
-            >Công nghệ</a
-          >
+        <button
+          class="tab-button"
+          data-tab="technology"
+          title="Công nghệ tiên tiến của Kỳ Long"
+        >
+          Công nghệ
         </button>
-        <button class="tab-button" data-tab="facilities">
-          <a href="/aboutPage#co-so-vat-chat" title="Cơ sở vật chất của Kỳ Long"
-            >Cơ sở vật chất</a
-          >
+        <button
+          class="tab-button"
+          data-tab="facilities"
+          title="Cơ sở vật chất của Kỳ Long"
+        >
+          Cơ sở vật chất
         </button>
       </div>
 
