--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -602,7 +602,7 @@
         </div>
         <div class="news-grid">
           <!-- Embedded news items -->
-          <div class="news-item" data-article-url="/newsPage/newsArticle1">
+          <div class="news-item" data-article-url="/newsArticle1">
             <div class="news-thumbnail">
               <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 1" />
               <div class="news-date">01/03/2025</div>
@@ -613,7 +613,7 @@
             <div class="news-read-more">Xem chi tiết</div>
           </div>
 
-          <div class="news-item" data-article-url="/newsPage/newsArticle2">
+          <div class="news-item" data-article-url="/newsArticle1">
             <div class="news-thumbnail">
               <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 2" />
               <div class="news-date">25/02/2025</div>
@@ -624,7 +624,7 @@
             <div class="news-read-more">Xem chi tiết</div>
           </div>
 
-          <div class="news-item" data-article-url="/newsPage/newsArticle3">
+          <div class="news-item" data-article-url="/newsArticle1">
             <div class="news-thumbnail">
               <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 3" />
               <div class="news-date">18/02/2025</div>
@@ -635,7 +635,7 @@
             <div class="news-read-more">Xem chi tiết</div>
           </div>
 
-          <div class="news-item" data-article-url="/newsPage/newsArticle4">
+          <div class="news-item" data-article-url="/newsArticle1">
             <div class="news-thumbnail">
               <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 4" />
               <div class="news-date">10/02/2025</div>
