--- a/views/newsArticleHTML/newsArticle1.html
+++ b/views/newsArticleHTML/newsArticle1.html
@@ -572,21 +572,25 @@
           <h4>Về Kỳ Long</h4>
           <ul>
             <li>
-              <a href="/aboutPage" title="Giới thiệu về Kỳ Long">Giới thiệu</a>
-            </li>
-            <li>
-              <a href="/aboutPage#doi-ky-su" title="Đội ngũ kỹ sư Kỳ Long"
-                >Đội ngũ</a
+              <a href="/aboutPage#gioi-thieu" title="Giới thiệu về Kỳ Long"
+                >Giới thiệu</a
               >
             </li>
             <li>
-              <a href="/aboutPage#cong-nghe" title="Công nghệ Kỳ Long"
-                >Công nghệ</a
+              <a href="/aboutPage#thi-phan" title="Thị phần của Kỳ Long"
+                >Thị phần</a
               >
             </li>
             <li>
-              <a href="/licences" title="Giấy phép và chứng nhận Kỳ Long"
-                >Giấy phép</a
+              <a href="/aboutPage#tam-nhin" title="Tầm nhìn của Kỳ Long"
+                >Tầm nhìn</a
+              >
+            </li>
+            <li>
+              <a
+                href="/aboutPage#loi-the"
+                title="Lợi thế cạnh tranh của Kỳ Long"
+                >Lợi thế cạnh tranh</a
               >
             </li>
           </ul>
